kubernetes/apps/unifi/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unifi
  labels:
    pod-security.kubernetes.io/enforce: privileged
