kubernetes/apps/unifi/unifi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: immich
    meta.helm.sh/release-namespace: cloud
    #nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: unifi-ingress
  namespace: unifi
spec:
  rules:
  - host: unifi.service.fonzdm.xyz
    http:
      paths:
      - backend:
          service:
            name: unifi-controller-tcp
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - unifi.service.fonzdm.xyz
    secretName: unifi-ing-external-secret
